--- a/index.html
+++ b/index.html
@@ -20,19 +20,22 @@
 		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<div class="card">
-			<img src="images/image-qr-code.png" />
-			<p class="header">
-				Improve your front-end skills by building projects
-			</p>
-      <p>Scan the QR code to visit Front End Mentor and take your coding skills to the next level</p>
-			<div class="attribution">
-				Challenge by
-				<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-					>Frontend Mentor</a
-				>. Coded by
-				<a href="https://github.com/SleepDeprived0025">SleepDeprived0025</a>.
+		<main>
+			<div class="card">
+				<img src="images/image-qr-code.png" alt="an image of the qr code" />
+				<p class="header">Improve your front-end skills by building projects</p>
+				<p>
+					Scan the QR code to visit Front End Mentor and take your coding skills
+					to the next level
+				</p>
+				<div class="attribution">
+					Challenge by
+					<a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+						>Frontend Mentor</a
+					>. Coded by
+					<a href="https://github.com/SleepDeprived0025">SleepDeprived0025</a>.
+				</div>
 			</div>
-		</div>
+		</main>
 	</body>
 </html>
