--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<main>
 			<div class="card">
 				<img src="images/image-qr-code.png" alt="an image of the qr code" />
-				<p class="header">Improve your front-end skills by building projects</p>
+				<h1 class="header">Improve your front-end skills by building projects</h1>
 				<p>
 					Scan the QR code to visit Front End Mentor and take your coding skills
 					to the next level
